scripts/startup/bl_ui/node_add_menu_geometry.py
@@ -2,7 +2,10 @@
 import bpy
 from bpy.types import Menu
 from bl_ui import node_add_menu
-from bpy.app.translations import pgettext_iface as iface_
+from bpy.app.translations import (
+    pgettext_iface as iface_,
+    contexts as i18n_contexts,
+)
 
 
 class NODE_MT_geometry_node_GEO_ATTRIBUTE(Menu):
@@ -238,6 +241,7 @@ class NODE_MT_geometry_node_GEO_INPUT(Menu):
 class NODE_MT_geometry_node_GEO_INPUT_CONSTANT(Menu):
     bl_idname = "NODE_MT_geometry_node_GEO_INPUT_CONSTANT"
     bl_label = "Constant"
+    bl_translation_context = i18n_contexts.id_nodetree
 
     def draw(self, _context):
         layout = self.layout
